<resources>
    <string name="app_name">homework3.3.1</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="tree">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="x">x</string>
    <string name="div">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ravno">=</string>
    <string name="c">c</string>
    <string name="proc">%</string>
    <string name="change_cign">+/-</string>
    <string name="dot">.</string>
</resources>
