<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/numbers_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/edit_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/digits"
                android:digits="0123456789."/>



        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/family"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/edit_numbers"
            app:layout_constraintTop_toTopOf="@id/edit_numbers">


            <TextView
                android:id="@+id/litF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/litI"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/litI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="i"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/litL"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/litF"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/litL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="l"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/litI2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/litI"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/litI2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="i"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/litP"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/litL"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/litP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="p"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/litP2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/litI2"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/litP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="p"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/litO"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/litP"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/litO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="o"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/litV"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/litP2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/litV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="v"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/litO"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/action_complex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/c" />

            <Button
                android:id="@+id/btn_ce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_cign" />


            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/proc" />

            <Button
                android:id="@+id/btn_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/x" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/numbers_from_one_to_tree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />
            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/div" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_from_four_to_six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_from_seven_to_nine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/minus" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/numbers_zero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/zero" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dot" />

            <Button
                android:id="@+id/btn_ravno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ravno" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/numbers_all">








    </LinearLayout>




</RelativeLayout>